# MulanGeo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
include/MulanGeo/: Version.h.in
script/: build-wasm.bat
src/App/: CMakeLists.txt
src/App/include/MulanGeo/App/: Application.h
src/App/src/: Application.cpp  main.cpp
src/Core/: CMakeLists.txt
src/Core/Image/: Image.cpp  Image.h
src/Core/Log/: Log.h
src/Core/Reflection/: Macro.h  Object.cpp  Object.h  TypeInfo.h  TypeRegistry.cpp  TypeRegistry.h
src/Core/Result/: Result.cpp  Result.h  result_demo.cpp
src/Core/Serialization/: Archive.cpp  Archive.h  ArchiveError.h  BinaryArchive.cpp  BinaryArchive.h  JsonArchive.cpp  JsonArchive.h  Serializer.h  VersionBlock.cpp  VersionBlock.h
src/Core/include/MulanGeo/Core/: Buffer.h  Mesh.h  Renderer.h  Shader.h  Texture.h  Window.h
src/Core/src/: Buffer.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Window.cpp
src/Document/: CMakeLists.txt  Geometry.h  OCCTShapeGeometry.cpp  OCCTShapeGeometry.h
src/Engine/: CMakeLists.txt  Window.h
src/Engine/Interaction/: CameraManipulator.h  InputEvent.h  Operator.h
src/Engine/Math/: AABB.h  BoundingSphere.h  Mat4.h  Math.h  Quat.h  Vec3.h  Vec4.h
src/Engine/Platform/: Win32Window.cpp  Win32Window.h
src/Engine/RHI/: Buffer.h  CommandList.h  Device.h  DeviceFactory.cpp  Fence.h  PipelineState.h  RenderState.h  RenderTarget.h  RenderTypes.h  Sampler.h  Shader.h  SwapChain.h  Texture.h  VertexBuffer.h  VertexFormat.h  VertexLayout.h  VertexSemantic.h  vertex_layout_test.cpp
src/Engine/RHI/D3D11/: DX11Buffer.cpp  DX11Buffer.h  DX11CommandList.cpp  DX11CommandList.h  DX11Common.h  DX11Convert.h  DX11Device.cpp  DX11Device.h  DX11Fence.cpp  DX11Fence.h  DX11PipelineState.cpp  DX11PipelineState.h  DX11RenderTarget.cpp  DX11RenderTarget.h  DX11Sampler.cpp  DX11Sampler.h  DX11Shader.cpp  DX11Shader.h  DX11SwapChain.cpp  DX11SwapChain.h  DX11Texture.cpp  DX11Texture.h
src/Engine/RHI/D3D12/: DX12Buffer.cpp  DX12Buffer.h  DX12CommandList.cpp  DX12CommandList.h  DX12Common.h  DX12Convert.h  DX12DescriptorAllocator.cpp  DX12DescriptorAllocator.h  DX12Device.cpp  DX12Device.h  DX12Fence.cpp  DX12Fence.h  DX12FrameContext.cpp  DX12FrameContext.h  DX12PipelineState.cpp  DX12PipelineState.h  DX12RenderTarget.cpp  DX12RenderTarget.h  DX12Sampler.cpp  DX12Sampler.h  DX12Shader.cpp  DX12Shader.h  DX12SwapChain.cpp  DX12SwapChain.h  DX12Texture.cpp  DX12Texture.h  DX12UploadContext.cpp  DX12UploadContext.h
src/Engine/RHI/OpenGL/: GLCommandList.cpp  GLCommandList.h  GLCommon.h  GLDevice.cpp  GLDevice.h  GLPipelineState.cpp  GLRenderTarget.cpp  GLRenderTarget.h  GLSampler.cpp  GLSampler.h  GLSwapChain.cpp  GLSwapChain.h  GLTexture.cpp  GLTexture.h
src/Engine/RHI/Vulkan/: VKBuffer.cpp  VKBuffer.h  VKCommandList.cpp  VKCommandList.h  VKConvert.h  VKDescriptorAllocator.cpp  VKDescriptorAllocator.h  VKDescriptorSet.h  VKDevice.cpp  VKDevice.h  VKDeviceInit.cpp  VKFence.cpp  VKFence.h  VKFrameContext.cpp  VKFrameContext.h  VKPipelineState.cpp  VKPipelineState.h  VKRenderTarget.cpp  VKRenderTarget.h  VKSampler.cpp  VKSampler.h  VKShader.cpp  VKShader.h  VKSwapChain.cpp  VKSwapChain.h  VKTexture.cpp  VKTexture.h  VKUploadContext.cpp  VKUploadContext.h  VkCommon.h
src/Engine/Render/: EngineView.cpp  EngineView.h  GeometryCache.cpp  GeometryCache.h  LightEnvironment.h  Material.h  MaterialCache.cpp  MaterialCache.h  MaterialInstance.cpp  MaterialInstance.h  MaterialLibrary.cpp  MaterialLibrary.h  MaterialSerializer.cpp  MaterialSerializer.h  RenderGeometry.h  SceneRenderer.cpp  SceneRenderer.h  TextureCache.cpp  TextureCache.h  TextureLoader.cpp  TextureLoader.h
src/Engine/Render/Pass/: ForwardPass.cpp  ForwardPass.h  RenderPass.h
src/Engine/Render/Text/: FontAtlas.cpp  FontAtlas.h  TextLayout.cpp  TextLayout.h  TextRenderer.cpp  TextRenderer.h  TextTypes.h
src/Engine/Scene/: Camera.cpp  Camera.h  CullVisitor.h  Frustum.cpp  Frustum.h  GeometryNode.cpp  GeometryNode.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h
src/Engine/Scene/Camera/: Camera.cpp  Camera.h  RotationMode.h  TrackballRotation.cpp  TrackballRotation.h  TurntableRotation.cpp  TurntableRotation.h
src/Engine/include/MulanGeo/Engine/RHI/: VertexBuffer.h  VertexFormat.h  VertexLayout.h  VertexSemantic.h
src/Engine/shaders/: Common.hlsli  edge.frag.hlsl  edge.vert.hlsl  solid.frag.hlsl  wireframe.frag.hlsl
src/Engine/src/RHI/: vertex_layout_test.cpp
src/IO/: CMakeLists.txt  Document.h  DocumentManager.cpp  DocumentManager.h  IFileImporter.h  IOExport.h  ImageData.h  ImageLoader.cpp  ImageLoader.h  ImporterFactory.h  MeshData.h  MeshDocument.cpp  MeshDocument.h  MeshNode.h  OCCTImporter.cpp  OCCTImporter.h  SceneAdapter.h  UIDocument.cpp  UIDocument.h
src/IO/include/MulanGeo/IO/: CADImporter.h  ImporterFactory.h
src/IO/src/: CADImporter.cpp  OCCTImporter.cpp
src/QtApp/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  RenderWidget.cpp  RenderWidget.h  UIDocument.cpp  UIDocument.h  VulkanRenderWidget.h  main.cpp
src/QtApp/GLBackup/: MainWindow_GL.cpp
src/QtApp/UI/: DocWidget.cpp  DocWidget.h  DocumentArea.cpp  EngineSettings.cpp  EngineSettings.h  EngineSettingsDialog.cpp  EngineSettingsDialog.h  MainWindow.cpp  MainWindow.h  RenderWidget.cpp  RenderWidget.h  SceneBuilder.cpp  SceneBuilder.h  UIDocument.cpp  UIDocument.h
src/build-wasm/: CMakeLists.txt  main_wasm.cpp
